package com.montaniamargarita.model.enums;

/**
 * Estados posibles de una mesa del restaurante.
 * Solo enumera los estados; no contiene operaciones.
 */
public enum EstadoMesa {
    LIBRE,
    OCUPADA,
    CUENTA_SOLICITADA
}
