package com.montaniamargarita.model.enums;

/**
 * Métodos de pago aceptados.
 * Solo enumera los estados; no contiene operaciones.
 */
public enum MetodoPago {
    EFECTIVO,
    TARJETA_TRANSFERENCIA
}
