package com.montaniamargarita.model.enums;

/**
 * Roles disponibles en el sistema.
 * Solo enumera los estados; no contiene operaciones.
 */
public enum Rol {
    MESERO,
    ADMINISTRADOR
}
